--- a/src/assets/element-variables.scss
+++ b/src/assets/element-variables.scss
@@ -1,7 +1,7 @@
 :root {
   --white: #ffffff;
   --black: #000000;
-  --primary: #f4a261;
+  --primary: #F77F00;
   --primary-light: #f3b769;
   // --primary-light: #eb8600;
   --background: #e8eaee;
@@ -15,11 +15,13 @@
   --font-medium: 16px;
   --font-normal: 14px;
   --font-small: 12px;
+
+  --nav-width: 230px;
 }
 
 /* 改变主题色变量 */
 $-color-white: #ffffff;
-$--color-primary: #f4a261;
+$--color-primary: #F77F00;
 
 /* 改变 icon 字体路径变量，必需 */
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
