--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -15,7 +15,7 @@ html {
 }
 
 .container {
-  margin-left: 200px;
+  margin-left: var(--nav-width);
   margin-top: 50px;
   padding: 0 12px 12px;
   background-color: var(--background);
@@ -42,7 +42,7 @@ html {
       display: flex;
       flex-flow: row;
       background-color: var(--white);
-      padding: 10px 18px 0;
+      padding: 10px 16px 0;
       margin: 0 -12px 12px;
 
       .el-form-item {
@@ -85,7 +85,13 @@ html {
 
       .el-table {
         flex: 1;
-        padding: 0 16px;
+        width: calc(100% - 32px);
+        margin: 0 auto;
+
+        th {
+          color: var(--title6);
+          padding: 10px 0;
+        }
 
         .el-table__header-wrapper {
           thead {
@@ -94,6 +100,10 @@ html {
               padding: 10px 0;
             }
           }
+        }
+
+        td {
+          padding: 6px 0;
         }
 
         .el-table__body-wrapper {
