--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -9,11 +9,6 @@
   display: none;
 }
 
-html {
-  height: 100%;
-  overflow: auto;
-}
-
 .container {
   margin-left: var(--nav-width);
   margin-top: 50px;
@@ -36,17 +31,23 @@ html {
     .el-button--default {
       border: 1px solid var(--primary);
       color: var(--primary);
+
+      &.is-disabled {
+        border: 1px solid #c9cbd4;
+        background-color: #c9cbd4;
+        color: var(--white);
+      }
     }
 
     .search_bar {
       display: flex;
       flex-flow: row;
       background-color: var(--white);
-      padding: 10px 16px 0;
+      padding: 10px 16px 6px;
       margin: 0 -12px 12px;
 
       .el-form-item {
-        margin-bottom: 10px !important;
+        margin-bottom: 4px !important;
 
         .el-form-item__label {
           padding: 0 10px 0 0;
@@ -56,9 +57,17 @@ html {
       .right {
         width: 160px;
         min-width: 160px;
+        flex: 1;
         height: 40px;
         line-height: 40px;
         text-align: right;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        > div {
+          flex: 1;
+        }
       }
     }
 
@@ -87,6 +96,20 @@ html {
         flex: 1;
         width: calc(100% - 32px);
         margin: 0 auto;
+
+        .caret-wrapper {
+          height: 23px;
+
+          .sort-caret {
+            &.ascending {
+              top: 0;
+            }
+
+            &.descending {
+              bottom: 0;
+            }
+          }
+        }
 
         th {
           color: var(--title6);
