replace 'scope' with 'slot-scope'

--- a/src/assets/element-variables.scss
+++ b/src/assets/element-variables.scss
@@ -3,6 +3,7 @@
   --black: #000000;
   --blue: #1B98E0;
   --green: #1A936F;
+  --red: #EF476F;
 
   --primary: #f77f00;
   --primary-light: #f3b769;
